# abac-deterlab

./: README.md
abac/: AUTHORS  BUGS  CREDITS  INSTALL  Makefile  Makefile.am  Makefile.in  README  abac.spec  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool
abac/cred_printer/: Makefile  README  cred_client.py  cred_server.py  setup.py
abac/cred_printer/cred_printer/: server.py  service_error.py  util.py
abac/creddy/: attribute.c  attribute_rule.c  creddy.c  creddy.hh  creddy_common.h  display.c  generate.c  keyid.c  roles.c  verify.c
abac/creddy/.deps/: attribute.Po  attribute_rule.Po  creddy.Po  display.Po  generate.Po  keyid.Po  roles.Po  verify.Po
abac/doc/: ABAC.hh  API  ChangeLog  INSTALL  TOC  creddy.1  dependencies  design  extract_doc.c  java_install  keystore  role_names  rpm.notes  usage_scenario
abac/java/: .classpath  Dumper.java  GraphTest.java  Regression.java  build.gradle  build.xml  simple.rt0
abac/java/gradle/: install-gradle.readme
abac/java/net/deterlab/abac/: ABACException.java  BadSignatureException.java  CertInvalidException.java  Context.java  Credential.java  CredentialFactory.java  CredentialFactorySpecialization.java  GENICredential.java  GENICredentialv1_0.java  GENICredentialv1_1.java  GENIPrivCredential.java  Identity.java  InternalCredential.java  KeyIDMap.java  MapsKeyIDs.java  Query.java  (+3 more)
abac/java/regression/: README  e0-check-geni11_uns.xml  e0-check-geni_uns.xml  not_ss_uns.xml  openssl.cnf  priv_uns.xml  setup_certs.sh  update_xml.py
abac/libabac/: abac.c  abac.hh  abac_attribute.c  abac_graph.c  abac_graph.h  abac_id.c  abac_keyid_map.c  abac_list.c  abac_list.h  abac_openssl.c  abac_openssl.h  abac_role.c  abac_set.c  abac_set.h  abac_util.c  abac_util.h  abac_verifier.c  abac_verifier.h  abac_xml.c  abac_xml.h  libabac_common.h  options.c  options.h  prover.c  prover_plus.cc
abac/libabac/.deps/: abac.Plo  abac_attribute.Plo  abac_graph.Plo  abac_id.Plo  abac_keyid_map.Plo  abac_list.Plo  abac_openssl.Plo  abac_role.Plo  abac_set.Plo  abac_util.Plo  abac_verifier.Plo  abac_xml.Plo  options.Po  prover.Po  prover_plus.Po
abac/libabac/compat/: readpassphrase.c  readpassphrase.h
abac/libabac/compat/.deps/: readpassphrase.Plo
abac/m4/: ax_check_xml2.m4  ax_check_xmlsec1.m4  ax_python_devel.m4
abac/preprover/: XMLRPC.pm  abac_preprover_client.pl  abac_preprover_server.pl
abac/swig/: abac.h  abac.i
abac/swig/perl/: Makefile  SSL_keyid.c  SSL_keyid.h  abac_prover.pl  chunk.i  creddy_keyid.pl  language.i  partial_proof.pl
abac/swig/perl/.deps/: swig_perl_ABAC_la-SSL_keyid.Plo  swig_perl_ABAC_la-abac_wrap.Plo
abac/swig/python/: abac_prover.py  chunk.i  language.i
abac/swig/python/.deps/: swig_python__ABAC_la-abac_wrap.Plo
abac/tests/: Makefile  Makefile.am  Makefile.in  README  abac.mk  test_util.pl  test_util.py  test_util.sh
abac/tests/attr_tests/: IceCream_attr.xml_save  Makefile  Makefile.am  Makefile.in  README  abac_attr.xml_save  not_ss.xml_save  setup.sh  show.sh
abac/tests/creddy_prover_tests/: Makefile  Makefile.am  Makefile.in
abac/tests/creddy_prover_tests/acme_rockets_intersection_rt0/: README  run_query
abac/tests/creddy_prover_tests/acme_rockets_rt0/: README  run_query
abac/tests/creddy_prover_tests/experiment_create_rt0/: README  run_query
abac/tests/creddy_prover_tests/ice_cream_rt0/: README  run_query
abac/tests/creddy_tests/: Makefile  Makefile.am  PGissuer.pem_save  README  attribute.sh  attribute_rule.sh  generate.sh  keyid.sh  roles.sh  setup.sh  vProtoGENI.xml_save  verify.sh
abac/tests/example_scripts/: Makefile  Makefile.am  Makefile.in
abac/tests/example_scripts/c/: Makefile  Makefile.am  Makefile.in  abac_attr.c  abac_prover.c  loader.c  run_leak_prover  run_prover  setup.sh  tbasic.c  tchunk.c
abac/tests/example_scripts/perl/: Makefile  Makefile.am  Makefile.in  abac_attr.pl  abac_keyid.pl  abac_prover.pl  run_attr  run_prover
abac/tests/example_scripts/python/: Makefile  Makefile.am  Makefile.in  abac_attr.py  abac_e_attr.py  abac_keyid.py  abac_keyid2.py  abac_prover.py  run_e_prover  run_prover  setup.sh
abac/tests/example_scripts/wiki/: .grep.swp  Makefile  Makefile.am  Makefile.in  README  attr1.py  attr2.py  attr3.py  attr4.c  attr4.py  attr4_setup.py  ctxtQuery1.py  ctxtQuery2.py  ctxtQuery3.py  ctxtQuery3_setup.py  ctxtQuery4.c  ctxtQuery4.py  ctxtQuery4_setup.py  id1.py  id2.py  id3.py  id4.ck  id4.py  id5.ck  id5.py  newguy.sh
abac/tests/python_tests/: Makefile  Makefile.am  Makefile.in
abac/tests/python_tests/acme_rockets_intersection_rt0/: README  attr.py  query.py  setup.py
abac/tests/python_tests/acme_rockets_rt0/: README  attr.py  query.py  setup.py
abac/tests/python_tests/basic_attribute/: README  query.py  setup.py
abac/tests/python_tests/basic_id/: README  id_ctxt.py  query.py  setup.py
abac/tests/python_tests/experiment_create_rt0/: README  attr.py  query.py  setup.py
abac/tests/scaling_tests/: Makefile  Makefile.am  Makefile.in  README  r
abac/tests/scaling_tests/daisychain/: Makefile  Makefile.am  Makefile.in
abac/tests/scaling_tests/daisychain/likes_python/: Makefile  Makefile.am  Makefile.in  run_one
abac/tests/scaling_tests/daisychain/likes_python/base/: ATTR.py  PROVE.sh  QUERY.py  README  SETUP.py
abac/tests/scaling_tests/haystack/: Makefile  Makefile.am  Makefile.in  README
abac/tests/scaling_tests/haystack/fruit_prover/: Makefile  run_one
abac/tests/scaling_tests/haystack/fruit_prover/base/: QUERY  README  RESULT
abac/tests/scaling_tests/haystack/fruit_python/: Makefile  run_one
abac/tests/scaling_tests/haystack/fruit_python/base/: ATTR.py  QUERY.py  README  RESULT  SETUP.py
abac/tests/scaling_tests/haystack/ralphs_prover/: Makefile  Makefile.am  Makefile.in  run_one
abac/tests/scaling_tests/haystack/ralphs_prover/base/: QUERY  README
abac/tests/scaling_tests/plotting/: gen_big  gen_med  gen_small  note  run_plot  split_it
abac/tools/suggest/: suggest.py
creddy_tests/: Makefile  Makefile.in  display.sh  issuer.pem_save  not_ss.pem_save  not_ss.xml_save  priv.xml_save
(+6 files in other folders)
